# hospital-appointment-system

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml
models/: consulta.py  medico.py  paciente.py
repositories/: database.py
services/: agendamento_service.py
utils/: validacoes.py
