[tool.poetry]
name = "hospital-appointment-system"
version = "0.1.0"
description = "Sistema de Agendamento Hospitalar - Estudo de Arquitetura de Software"
authors = ["Edinaldo Bispo <edbispo.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false 
repository = "https://github.com/EdBispoDev/hospital-appointment-system"
keywords = ["hospital", "appointment", "healthcare", "python", "study"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]

[tool.poetry.dependencies]
python = "^3.10"
# Futuramente adicionaremos:
# fastapi = {version = "^0.104.0", optional = true}
# uvicorn = {version = "^0.24.0", optional = true}
# pydantic = "^2.4.0"

[tool.poetry.group.dev.dependencies]
# Ferramentas de desenvolvimento
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
start = "src.main:main"
dev = "src.main:dev_server"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Configuração do Black (formatador)
[tool.black]
line-length = 88
target-version = ['py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# Configuração do isort (organizador de imports)
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# Configuração do mypy (type checker)
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true

# Configuração do pytest
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests"
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"